텍스트 유형 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,windows,osx,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,osx,visualstudiocode
 
+#Text
+*.Text
+#텍스트 파일들은 예외사항으로 처리
+
 ### Node ###
 # Logs
 logs
@@ -148,7 +152,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
