텍스트 유형 추가(txt를 Text로 써서 오류 나서 바꿈)

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,osx,visualstudiocode
 
 #Text
-*.Text
+*.txt
 #텍스트 파일들은 예외사항으로 처리
 
 ### Node ###
